--- a/frontend/src/pages/Checkout/Checkout.css
+++ b/frontend/src/pages/Checkout/Checkout.css
@@ -1,6 +1,6 @@
 /* Checkout Container */
 .checkout-container {
-  max-width: 800px;
+  width: 700px;
   margin: auto;
   padding: 20px;
 }
@@ -61,11 +61,12 @@
 
 /* Cart Totals */
 .cart-totals {
-  background: #f8f8f8;
+  background: #db9797;
   padding: 15px;
   border-radius: 5px;
   text-align: right;
   margin-top: 20px;
+  margin-bottom: 70px;
 }
 
 .cart-totals h3 {
@@ -93,7 +94,7 @@
   font-size: 18px;
   cursor: pointer;
   border-radius: 5px;
-  margin-top: 10px;
+  margin-top: 20px;
   transition: 0.3s ease;
 }
 
